simdX86/c2nimsrc/simdAvx.h

__m256i _mm256_insert_epi64 (__m256i a, __int64 i, const int index);
__m256i _mm256_insert_epi8 (__m256i a, __int8 i, const int index);
__m256d _mm256_insertf128_pd (__m256d a, __m128d b, int imm8);
__m256 _mm256_insertf128_ps (__m256 a, __m128 b, int imm8);
__m256i _mm256_insertf128_si256 (__m256i a, __m128i b, int imm8);
__m256i _mm256_inserti128_si256 (__m256i a, __m128i b, const int imm8);
__m256i _mm256_lddqu_si256 (__m256i const * mem_addr);
__m256d _mm256_load_pd (double const * mem_addr);
__m256 _mm256_load_ps (float const * mem_addr);
__m256i _mm256_load_si256 (__m256i const * mem_addr);
__m256d _mm256_loadu_pd (double const * mem_addr);
__m256 _mm256_loadu_ps (float const * mem_addr);
__m256i _mm256_loadu_si256 (__m256i const * mem_addr);
__m256 _mm256_loadu2_m128 (float const* hiaddr, float const* loaddr);
__m256d _mm256_loadu2_m128d (double const* hiaddr, double const* loaddr);
__m256i _mm256_loadu2_m128i (__m128i const* hiaddr, __m128i const* loaddr);
__m256i _mm256_madd_epi16 (__m256i a, __m256i b);
__m256i _mm256_maddubs_epi16 (__m256i a, __m256i b);
__m128i _mm_maskload_epi32 (int const* mem_addr, __m128i mask);
__m256i _mm256_maskload_epi32 (int const* mem_addr, __m256i mask);
__m128i _mm_maskload_epi64 (__int64 const* mem_addr, __m128i mask);
__m256i _mm256_maskload_epi64 (__int64 const* mem_addr, __m256i mask);
__m128d _mm_maskload_pd (double const * mem_addr, __m128i mask);
__m256d _mm256_maskload_pd (double const * mem_addr, __m256i mask);
__m128 _mm_maskload_ps (float const * mem_addr, __m128i mask);
__m256 _mm256_maskload_ps (float const * mem_addr, __m256i mask);
void _mm_maskstore_epi32 (int* mem_addr, __m128i mask, __m128i a);
void _mm256_maskstore_epi32 (int* mem_addr, __m256i mask, __m256i a);
void _mm_maskstore_epi64 (__int64* mem_addr, __m128i mask, __m128i a);
void _mm256_maskstore_epi64 (__int64* mem_addr, __m256i mask, __m256i a);
void _mm_maskstore_pd (double * mem_addr, __m128i mask, __m128d a);
void _mm256_maskstore_pd (double * mem_addr, __m256i mask, __m256d a);
void _mm_maskstore_ps (float * mem_addr, __m128i mask, __m128 a);
void _mm256_maskstore_ps (float * mem_addr, __m256i mask, __m256 a);
__m256i _mm256_max_epi16 (__m256i a, __m256i b);
__m256i _mm256_max_epi32 (__m256i a, __m256i b);
__m256i _mm256_max_epi8 (__m256i a, __m256i b);
__m256i _mm256_max_epu16 (__m256i a, __m256i b);
__m256i _mm256_max_epu32 (__m256i a, __m256i b);
__m256i _mm256_max_epu8 (__m256i a, __m256i b);
__m256d _mm256_max_pd (__m256d a, __m256d b);
__m256 _mm256_max_ps (__m256 a, __m256 b);
__m256i _mm256_min_epi16 (__m256i a, __m256i b);
__m256i _mm256_min_epi32 (__m256i a, __m256i b);
__m256i _mm256_min_epi8 (__m256i a, __m256i b);
__m256i _mm256_min_epu16 (__m256i a, __m256i b);
__m256i _mm256_min_epu32 (__m256i a, __m256i b);
__m256i _mm256_min_epu8 (__m256i a, __m256i b);
__m256d _mm256_min_pd (__m256d a, __m256d b);
__m256 _mm256_min_ps (__m256 a, __m256 b);
__m256d _mm256_movedup_pd (__m256d a);
__m256 _mm256_movehdup_ps (__m256 a);
__m256 _mm256_moveldup_ps (__m256 a);
int _mm256_movemask_epi8 (__m256i a);
int _mm256_movemask_pd (__m256d a);
int _mm256_movemask_ps (__m256 a);
__m256i _mm256_mpsadbw_epu8 (__m256i a, __m256i b, const int imm8);
__m256i _mm256_mul_epi32 (__m256i a, __m256i b);
__m256i _mm256_mul_epu32 (__m256i a, __m256i b);
__m256d _mm256_mul_pd (__m256d a, __m256d b);
__m256 _mm256_mul_ps (__m256 a, __m256 b);
__m256i _mm256_mulhi_epi16 (__m256i a, __m256i b);
__m256i _mm256_mulhi_epu16 (__m256i a, __m256i b);
__m256i _mm256_mulhrs_epi16 (__m256i a, __m256i b);
__m256i _mm256_mullo_epi16 (__m256i a, __m256i b);
__m256i _mm256_mullo_epi32 (__m256i a, __m256i b);
__m256d _mm256_or_pd (__m256d a, __m256d b);
__m256 _mm256_or_ps (__m256 a, __m256 b);
__m256i _mm256_or_si256 (__m256i a, __m256i b);
__m256i _mm256_packs_epi16 (__m256i a, __m256i b);
__m256i _mm256_packs_epi32 (__m256i a, __m256i b);
__m256i _mm256_packus_epi16 (__m256i a, __m256i b);
__m256i _mm256_packus_epi32 (__m256i a, __m256i b);
__m128d _mm_permute_pd (__m128d a, int imm8);
__m256d _mm256_permute_pd (__m256d a, int imm8);
__m128 _mm_permute_ps (__m128 a, int imm8);
__m256 _mm256_permute_ps (__m256 a, int imm8);
__m256d _mm256_permute2f128_pd (__m256d a, __m256d b, int imm8);
__m256 _mm256_permute2f128_ps (__m256 a, __m256 b, int imm8);
__m256i _mm256_permute2f128_si256 (__m256i a, __m256i b, int imm8);
__m256i _mm256_permute2x128_si256 (__m256i a, __m256i b, const int imm8);
__m256i _mm256_permute4x64_epi64 (__m256i a, const int imm8);
__m256d _mm256_permute4x64_pd (__m256d a, const int imm8);
__m128d _mm_permutevar_pd (__m128d a, __m128i b);
__m256d _mm256_permutevar_pd (__m256d a, __m256i b);
__m128 _mm_permutevar_ps (__m128 a, __m128i b);
__m256 _mm256_permutevar_ps (__m256 a, __m256i b);
__m256i _mm256_permutevar8x32_epi32 (__m256i a, __m256i idx);
__m256 _mm256_permutevar8x32_ps (__m256 a, __m256i idx);
__m256 _mm256_rcp_ps (__m256 a);
__m256d _mm256_round_pd (__m256d a, int rounding);
__m256 _mm256_round_ps (__m256 a, int rounding);
__m256 _mm256_rsqrt_ps (__m256 a);
__m256i _mm256_sad_epu8 (__m256i a, __m256i b);
__m256i _mm256_set_epi16 (short e15, short e14, short e13, short e12, short e11, short e10, short e9, short e8, short e7, short e6, short e5, short e4, short e3, short e2, short e1, short e0);
__m256i _mm256_set_epi32 (int e7, int e6, int e5, int e4, int e3, int e2, int e1, int e0);
__m256i _mm256_set_epi64x (__int64 e3, __int64 e2, __int64 e1, __int64 e0);