simdX86/simdAvxGeneric.nim

proc insert_epi64*(a: m256i; i: int64; index: cint): m256i {.
    importc: "_mm256_insert_epi64", header: "immintrin.h".}
proc insert_epi8*(a: m256i; i: int8; index: cint): m256i {.
    importc: "_mm256_insert_epi8", header: "immintrin.h".}
proc insertf128*(a: m256d; b: m128d; imm8: cint): m256d {.
    importc: "_mm256_insertf128_pd", header: "immintrin.h".}
proc insertf128*(a: m256; b: m128; imm8: cint): m256 {.importc: "_mm256_insertf128_ps",
    header: "immintrin.h".}
proc insertf128_si256*(a: m256i; b: m128i; imm8: cint): m256i {.
    importc: "_mm256_insertf128_si256", header: "immintrin.h".}
proc inserti128_si256*(a: m256i; b: m128i; imm8: cint): m256i {.
    importc: "_mm256_inserti128_si256", header: "immintrin.h".}
proc lddqu_si256*(mem_addr: ptr m256i): m256i {.importc: "_mm256_lddqu_si256",
    header: "immintrin.h".}
proc load_pd256*(mem_addr: ptr cdouble): m256d {.importc: "_mm256_load_pd",
    header: "immintrin.h".}
proc load_ps256*(mem_addr: ptr cfloat): m256 {.importc: "_mm256_load_ps",
    header: "immintrin.h".}
proc load_si256*(mem_addr: ptr m256i): m256i {.importc: "_mm256_load_si256",
    header: "immintrin.h".}
proc loadu_pd256*(mem_addr: ptr cdouble): m256d {.importc: "_mm256_loadu_pd",
    header: "immintrin.h".}
proc loadu_ps256*(mem_addr: ptr cfloat): m256 {.importc: "_mm256_loadu_ps",
    header: "immintrin.h".}
proc loadu_si256*(mem_addr: ptr m256i): m256i {.importc: "_mm256_loadu_si256",
    header: "immintrin.h".}
proc loadu2_m128*(hiaddr: ptr cfloat; loaddr: ptr cfloat): m256 {.
    importc: "_mm256_loadu2_m128", header: "immintrin.h".}
proc loadu2_m128d*(hiaddr: ptr cdouble; loaddr: ptr cdouble): m256d {.
    importc: "_mm256_loadu2_m128d", header: "immintrin.h".}
proc loadu2_m128i*(hiaddr: ptr m128i; loaddr: ptr m128i): m256i {.
    importc: "_mm256_loadu2_m128i", header: "immintrin.h".}
proc madd_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_madd_epi16",
                                        header: "immintrin.h".}
proc maddubs_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_maddubs_epi16",
    header: "immintrin.h".}
proc maskload*(mem_addr: ptr cint; mask: m128i): m128i {.importc: "_mm_maskload_epi32",
    header: "immintrin.h".}
proc maskload*(mem_addr: ptr cint; mask: m256i): m256i {.
    importc: "_mm256_maskload_epi32", header: "immintrin.h".}
proc maskload*(mem_addr: ptr int64; mask: m128i): m128i {.
    importc: "_mm_maskload_epi64", header: "immintrin.h".}
proc maskload*(mem_addr: ptr int64; mask: m256i): m256i {.
    importc: "_mm256_maskload_epi64", header: "immintrin.h".}
proc maskload*(mem_addr: ptr cdouble; mask: m128i): m128d {.importc: "_mm_maskload_pd",
    header: "immintrin.h".}
proc maskload*(mem_addr: ptr cdouble; mask: m256i): m256d {.
    importc: "_mm256_maskload_pd", header: "immintrin.h".}
proc maskload*(mem_addr: ptr cfloat; mask: m128i): m128 {.importc: "_mm_maskload_ps",
    header: "immintrin.h".}
proc maskload*(mem_addr: ptr cfloat; mask: m256i): m256 {.
    importc: "_mm256_maskload_ps", header: "immintrin.h".}
proc maskstore_epi32*(mem_addr: ptr cint; mask: m128i; a: m128i) {.
    importc: "_mm_maskstore_epi32", header: "immintrin.h".}
proc maskstore_epi32*(mem_addr: ptr cint; mask: m256i; a: m256i) {.
    importc: "_mm256_maskstore_epi32", header: "immintrin.h".}
proc maskstore_epi64*(mem_addr: ptr int64; mask: m128i; a: m128i) {.
    importc: "_mm_maskstore_epi64", header: "immintrin.h".}
proc maskstore_epi64*(mem_addr: ptr int64; mask: m256i; a: m256i) {.
    importc: "_mm256_maskstore_epi64", header: "immintrin.h".}
proc maskstore*(mem_addr: ptr cdouble; mask: m128i; a: m128d) {.
    importc: "_mm_maskstore_pd", header: "immintrin.h".}
proc maskstore*(mem_addr: ptr cdouble; mask: m256i; a: m256d) {.
    importc: "_mm256_maskstore_pd", header: "immintrin.h".}
proc maskstore*(mem_addr: ptr cfloat; mask: m128i; a: m128) {.
    importc: "_mm_maskstore_ps", header: "immintrin.h".}
proc maskstore*(mem_addr: ptr cfloat; mask: m256i; a: m256) {.
    importc: "_mm256_maskstore_ps", header: "immintrin.h".}
proc max_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_max_epi16",
                                       header: "immintrin.h".}
proc max_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_max_epi32",
                                       header: "immintrin.h".}
proc max_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_max_epi8",
                                      header: "immintrin.h".}
proc max_epu16*(a: m256i; b: m256i): m256i {.importc: "_mm256_max_epu16",
                                       header: "immintrin.h".}
proc max_epu32*(a: m256i; b: m256i): m256i {.importc: "_mm256_max_epu32",
                                       header: "immintrin.h".}
proc max_epu8*(a: m256i; b: m256i): m256i {.importc: "_mm256_max_epu8",
                                      header: "immintrin.h".}
proc max*(a: m256d; b: m256d): m256d {.importc: "_mm256_max_pd", header: "immintrin.h".}
proc max*(a: m256; b: m256): m256 {.importc: "_mm256_max_ps", header: "immintrin.h".}
proc min_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_min_epi16",
                                       header: "immintrin.h".}
proc min_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_min_epi32",
                                       header: "immintrin.h".}
proc min_epi8*(a: m256i; b: m256i): m256i {.importc: "_mm256_min_epi8",
                                      header: "immintrin.h".}
proc min_epu16*(a: m256i; b: m256i): m256i {.importc: "_mm256_min_epu16",
                                       header: "immintrin.h".}
proc min_epu32*(a: m256i; b: m256i): m256i {.importc: "_mm256_min_epu32",
                                       header: "immintrin.h".}
proc min_epu8*(a: m256i; b: m256i): m256i {.importc: "_mm256_min_epu8",
                                      header: "immintrin.h".}
proc min*(a: m256d; b: m256d): m256d {.importc: "_mm256_min_pd", header: "immintrin.h".}
proc min*(a: m256; b: m256): m256 {.importc: "_mm256_min_ps", header: "immintrin.h".}
proc movedup*(a: m256d): m256d {.importc: "_mm256_movedup_pd", header: "immintrin.h".}
proc movehdup*(a: m256): m256 {.importc: "_mm256_movehdup_ps", header: "immintrin.h".}
proc moveldup*(a: m256): m256 {.importc: "_mm256_moveldup_ps", header: "immintrin.h".}
proc movemask_epi8*(a: m256i): cint {.importc: "_mm256_movemask_epi8",
                                  header: "immintrin.h".}
proc movemask*(a: m256d): cint {.importc: "_mm256_movemask_pd", header: "immintrin.h".}
proc movemask*(a: m256): cint {.importc: "_mm256_movemask_ps", header: "immintrin.h".}
proc mpsadbw_epu8*(a: m256i; b: m256i; imm8: cint): m256i {.
    importc: "_mm256_mpsadbw_epu8", header: "immintrin.h".}
proc mul_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_mul_epi32",
                                       header: "immintrin.h".}
proc mul_epu32*(a: m256i; b: m256i): m256i {.importc: "_mm256_mul_epu32",
                                       header: "immintrin.h".}
proc mul*(a: m256d; b: m256d): m256d {.importc: "_mm256_mul_pd", header: "immintrin.h".}
proc mul*(a: m256; b: m256): m256 {.importc: "_mm256_mul_ps", header: "immintrin.h".}
proc mulhi_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_mulhi_epi16",
    header: "immintrin.h".}
proc mulhi_epu16*(a: m256i; b: m256i): m256i {.importc: "_mm256_mulhi_epu16",
    header: "immintrin.h".}
proc mulhrs_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_mulhrs_epi16",
    header: "immintrin.h".}
proc mullo_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_mullo_epi16",
    header: "immintrin.h".}
proc mullo_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_mullo_epi32",
    header: "immintrin.h".}
proc `or`*(a: m256d; b: m256d): m256d {.importc: "_mm256_or_pd", header: "immintrin.h".}
proc `or`*(a: m256; b: m256): m256 {.importc: "_mm256_or_ps", header: "immintrin.h".}
proc or_si256*(a: m256i; b: m256i): m256i {.importc: "_mm256_or_si256",
                                      header: "immintrin.h".}
proc packs_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_packs_epi16",
    header: "immintrin.h".}
proc packs_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_packs_epi32",
    header: "immintrin.h".}
proc packus_epi16*(a: m256i; b: m256i): m256i {.importc: "_mm256_packus_epi16",
    header: "immintrin.h".}
proc packus_epi32*(a: m256i; b: m256i): m256i {.importc: "_mm256_packus_epi32",
    header: "immintrin.h".}
proc permute*(a: m128d; imm8: cint): m128d {.importc: "_mm_permute_pd",
                                       header: "immintrin.h".}
proc permute*(a: m256d; imm8: cint): m256d {.importc: "_mm256_permute_pd",
                                       header: "immintrin.h".}
proc permute*(a: m128; imm8: cint): m128 {.importc: "_mm_permute_ps",
                                     header: "immintrin.h".}
proc permute*(a: m256; imm8: cint): m256 {.importc: "_mm256_permute_ps",
                                     header: "immintrin.h".}
proc permute2f128*(a: m256d; b: m256d; imm8: cint): m256d {.
    importc: "_mm256_permute2f128_pd", header: "immintrin.h".}
proc permute2f128*(a: m256; b: m256; imm8: cint): m256 {.
    importc: "_mm256_permute2f128_ps", header: "immintrin.h".}
proc permute2f128_si256*(a: m256i; b: m256i; imm8: cint): m256i {.
    importc: "_mm256_permute2f128_si256", header: "immintrin.h".}
proc permute2x128_si256*(a: m256i; b: m256i; imm8: cint): m256i {.
    importc: "_mm256_permute2x128_si256", header: "immintrin.h".}
proc permute4x64_epi64*(a: m256i; imm8: cint): m256i {.
    importc: "_mm256_permute4x64_epi64", header: "immintrin.h".}
proc permute4x64*(a: m256d; imm8: cint): m256d {.importc: "_mm256_permute4x64_pd",
    header: "immintrin.h".}
proc permutevar*(a: m128d; b: m128i): m128d {.importc: "_mm_permutevar_pd",
                                        header: "immintrin.h".}
proc permutevar*(a: m256d; b: m256i): m256d {.importc: "_mm256_permutevar_pd",
                                        header: "immintrin.h".}
proc permutevar*(a: m128; b: m128i): m128 {.importc: "_mm_permutevar_ps",
                                      header: "immintrin.h".}
proc permutevar*(a: m256; b: m256i): m256 {.importc: "_mm256_permutevar_ps",
                                      header: "immintrin.h".}
proc permutevar8x32_epi32*(a: m256i; idx: m256i): m256i {.
    importc: "_mm256_permutevar8x32_epi32", header: "immintrin.h".}
proc permutevar8x32*(a: m256; idx: m256i): m256 {.importc: "_mm256_permutevar8x32_ps",
    header: "immintrin.h".}
proc rcp*(a: m256): m256 {.importc: "_mm256_rcp_ps", header: "immintrin.h".}
proc round*(a: m256d; rounding: cint): m256d {.importc: "_mm256_round_pd",
    header: "immintrin.h".}
proc round*(a: m256; rounding: cint): m256 {.importc: "_mm256_round_ps",
                                       header: "immintrin.h".}
proc rsqrt*(a: m256): m256 {.importc: "_mm256_rsqrt_ps", header: "immintrin.h".}
proc sad_epu8*(a: m256i; b: m256i): m256i {.importc: "_mm256_sad_epu8",
                                      header: "immintrin.h".}
proc setepi16*(e15: cshort; e14: cshort; e13: cshort; e12: cshort; e11: cshort;
              e10: cshort; e9: cshort; e8: cshort; e7: cshort; e6: cshort; e5: cshort;
              e4: cshort; e3: cshort; e2: cshort; e1: cshort; e0: cshort): m256i {.
    importc: "_mm256_set_epi16", header: "immintrin.h".}
proc setepi32*(e7: cint; e6: cint; e5: cint; e4: cint; e3: cint; e2: cint; e1: cint; e0: cint): m256i {.
    importc: "_mm256_set_epi32", header: "immintrin.h".}
proc setepi64x*(e3: int64; e2: int64; e1: int64; e0: int64): m256i {.
    importc: "_mm256_set_epi64x", header: "immintrin.h".}
proc setepi8*(e31: char; e30: char; e29: char; e28: char; e27: char; e26: char; e25: char;
             e24: char; e23: char; e22: char; e21: char; e20: char; e19: char; e18: char;
             e17: char; e16: char; e15: char; e14: char; e13: char; e12: char; e11: char;
